--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.datasource.username=root
 spring.datasource.password=springboot
 ## Display sql on console
 logging.level.org.springframework.jdbc.core = TRACE
+## ?? Date ????
+spring.jackson.time-zone=GMT+8
+## ?? Date ?????????
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
